--- a/HLS_IA/FLOAT/Makefile
+++ b/HLS_IA/FLOAT/Makefile
@@ -1,8 +1,8 @@
 CC = gcc
 CFLAGS = -I/usr/include/hdf5/serial/ -O3
-LDFLAGS = -lhdf5_serial -lm
+LDFLAGS = -L/usr/lib/x86_64-linux-gnu/hdf5/serial -lhdf5_serial -lm
 
-OBJS = lenet_cnn_float.o fc.o conv.o pool.o utils.o softmax.o
+OBJS = lenet_cnn_float.o fc.o conv.o pooling.o utils.o softmax.o
 
 all: lenet_cnn_float
 
@@ -15,12 +15,8 @@ lenet_cnn_float.o: lenet_cnn_float.c lenet_cnn_float.h
 fc.o: fc.c lenet_cnn_float.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
-
-#conv.o: conv.c lenet_cnn_float.h
-#	$(CC) $(CFLAGS) -c $< -o $@
-
-#pool.o: pool.c lenet_cnn_float.h
-#	$(CC) $(CFLAGS) -c $< -o $@
+pooling.o: pooling.c pooling.h lenet_cnn_float.h
+	$(CC) $(CFLAGS) -c $< -o $@
 
 utils.o: utils.c lenet_cnn_float.h
 	$(CC) $(CFLAGS) -c $< -o $@
@@ -30,3 +26,4 @@ softmax.o: softmax.c lenet_cnn_float.h
 
 clean:
 	rm -f $(OBJS) lenet_cnn_float
+
