Added homemade convolution layer, added pragmas to fc.c

--- a/HLS_IA/FLOAT/Makefile
+++ b/HLS_IA/FLOAT/Makefile
@@ -1,8 +1,8 @@
 CC = gcc
 CFLAGS = -I/usr/include/hdf5/serial/ -O3
-LDFLAGS = -L/usr/lib/x86_64-linux-gnu/hdf5/serial -lhdf5_serial -lm
+LDFLAGS = -lhdf5_serial -lm
 
-OBJS = lenet_cnn_float.o fc.o conv.o pooling.o utils.o softmax.o
+OBJS = lenet_cnn_float.o conv.o fc.o pool.o utils.o softmax.o
 
 all: lenet_cnn_float
 
@@ -12,10 +12,13 @@ lenet_cnn_float: $(OBJS)
 lenet_cnn_float.o: lenet_cnn_float.c lenet_cnn_float.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
+conv.o: conv.c lenet_cnn_float.h
+	$(CC) $(CFLAGS) -c $< -o $@
+
 fc.o: fc.c lenet_cnn_float.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
-pooling.o: pooling.c pooling.h lenet_cnn_float.h
+pool.o: pool.c lenet_cnn_float.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
 utils.o: utils.c lenet_cnn_float.h
@@ -26,4 +29,3 @@ softmax.o: softmax.c lenet_cnn_float.h
 
 clean:
 	rm -f $(OBJS) lenet_cnn_float
-
